obsidian-tidy-lexer/src/token_stream/token/tag/snapshots/obsidian_tidy_lexer__token_stream__token__tag__table__tests__table_with_center_alignment.snap
---
source: obsidian-tidy-lexer/src/token_stream/token/tag/table.rs
expression: tokens
---
[
  [
    {
      "Start": {
        "Table": {
          "alignments": [
            "Center"
          ]
        }
      }
    },
    {
      "start": 0,
      "end": 32
    }
  ],
  [
    {
      "Start": "TableHead"
    },
    {
      "start": 0,
      "end": 11
    }
  ],
  [
    {
      "Start": "TableCell"
    },
    {
      "start": 1,
      "end": 9
    }
  ],
  [
    {
      "Text": "Center"
    },
    {
      "start": 2,
      "end": 8
    }
  ],
  [
    {
      "End": "TableCell"
    },
    {
      "start": 1,
      "end": 9
    }
  ],
  [
    {
      "End": "TableHead"
    },
    {
      "start": 0,
      "end": 11
    }
  ],
  [
    {
      "Start": "TableRow"
    },
    {
      "start": 22,
      "end": 32
    }
  ],
  [
    {
      "Start": "TableCell"
    },
    {
      "start": 23,
      "end": 31
    }
  ],
  [
    {
      "Text": "C"
    },
    {
      "start": 24,
      "end": 25
    }
  ],
  [
    {
      "End": "TableCell"
    },
    {
      "start": 23,
      "end": 31
    }
  ],
  [
    {
      "End": "TableRow"
    },
    {
      "start": 22,
      "end": 32
    }
  ],
  [
    {
      "End": "Table"
    },
    {
      "start": 0,
      "end": 32
    }
  ]
]
